# politdocs_assistant

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md
.devcontainer/: devcontainer.json
app/: generic_utils.py  init_utils.py  main.py  pyproject.toml  schlieren_utils.py
app/static_website_templates/: index.html  index_table.js  logs.html  logs_table.js
assistant/: cleanup.py  setup_assistant.py
hooks/: check_coverage.sh  check_debug.sh
